# learn_aws

./: buildspec.yml
codebuild_learn/: cdk.json  pyproject.toml
codebuild_learn/cdk.out/: CodebuildLearnStack.assets.json  CodebuildLearnStack.template.json  manifest.json  tree.json
codebuild_learn/src/: app.py
codebuild_learn/src/codebuild_learn/: codebuild_learn_stack.py
